--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline{
     stage("checkout"){
       steps{
         Scripts{
-	  checkout([$class: 'GitSCM', branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[credentialsId: 'java-mavan-project-repo', url: 'https://github.com/sriram-naresh/java-maven-project.git']]])
+	  checkout([$class: 'GitSCM', branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[credentialsId: 'git-tga2', url: 'https://github.com/sriram-naresh/git-tags.git']]])
 	  }
         }
      }
