--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,14 +2,14 @@ pipeline{
   stages{
     stage("checkout"){
       steps{
-        Scripts{
+        Script{
 	  checkout([$class: 'GitSCM', branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[credentialsId: 'git-tga2', url: 'https://github.com/sriram-naresh/git-tags.git']]])
 	  }
         }
      }
      stage("checkout"){
       steps{
-        scripts{
+        script{
          sh """
            mvn clean
            mvn install
